# GBEmu

./: .gitignore  CMakeLists.txt  GBEmu.sln  generated_tests.cpp  out.txt
.github/workflows/: cmake-multi-platform.yml
GBEmu/: CBOPCodes.cpp  GBEmu.cpp  GBEmu.vcxproj  GBEmu.vcxproj.filters  GameBoy.cpp  GameBoy.h  Opcodes.cpp  TileViewerWindow.cpp  TileViewerWindow.h  Window.cpp  Window.h  Writer.py  imgui.ini
Testing/: TAG
Testing/20241025-1111/: Test.xml
Tests/: CMakeLists.txt  JsonTest.cpp  Tests.vcxproj  generated_tests.cpp  generator.py  pch.h  splitter.py  test.cpp
Tests-old/: JsonTest.h  generated_tests.cpp  generator.py  generatore_2.py  splitter_fixer.py
dependencies/: CMakeLists.txt
include/: GameBoy.h  TileViewerWindow.h  Tiles.h  Window.h
src/: CBOPCodes.cpp  CBopcodes.cpp  GBEmu.cpp  GameBoy.cpp  Opcodes.cpp  TileViewerWindow.cpp  Tiles.cpp  Window.cpp  imgui.ini
test_data/: CB00.json  CB01.json  CB02.json  CB03.json  CB04.json  CB05.json  CB06.json  CB07.json  CB08.json  CB09.json  CB0a.json  CB0b.json  CB0c.json  CB0d.json  CB0e.json  CB0f.json  CB10.json  CB11.json  CB12.json  CB13.json  CB14.json  CB15.json  CB16.json  CB17.json  CB18.json  CB19.json  CB1a.json  CB1b.json  CB1c.json  CB1d.json  CB1e.json  CB1f.json  CB20.json  CB21.json  CB22.json  CB23.json  CB24.json  CB25.json  CB26.json  CB27.json  (+215 more)
